fix header burger z-index

--- a/src/front-end/less/components/header.less
+++ b/src/front-end/less/components/header.less
@@ -22,6 +22,7 @@ header{
       cursor: pointer;
       padding: 12px 0;
       float: right;
+      z-index: 1000;
       span {
         position: relative;
         display: block;
